--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
- DATABASE_URL="mongodb+srv://mongodb:94198380@cluster0.cg8jp2g.mongodb.net/airbnb"
- NEXTAUTH_SECRET="NEXTAUTH_SECRET"
- GITHUB_ID=""
- GITHUB_SECRET=""
- GOOGLE_CLIENT_ID=""
- GOOGLE_CLIENT_SECRET=""
+DATABASE_URL="mongodb+srv://mongodb:94198380@cluster0.cg8jp2g.mongodb.net/airbnb"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=cbfcc4a852e352a021fd
+GITHUB_SECRET=cb0f9de9c9859b3ea1a8ed072aa0d052774c3916
+
+GOOGLE_CLIENT_ID=446493444086-72t2ojr40t3li0kinchr44m5dr0lb6fa.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
