Listing creating step 4

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_SECRET=cb0f9de9c9859b3ea1a8ed072aa0d052774c3916
 
 GOOGLE_CLIENT_ID=446493444086-72t2ojr40t3li0kinchr44m5dr0lb6fa.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dztgses2d"
